# blpd

./: .gitignore  .pre-commit-config.yaml  LICENSE.txt  README.md  VERSION.txt  blpd.html  environment-dev.yml  index.html  lpd.py  main.py  plots.py  pyproject.toml  sample_run.py  search.js  search.json  setup.cfg  setup.py  utils.py
.binder/: requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yml  docs.yml
blpd/: __init__.py  bees.html  bees.py  chem.html  chem.py  lpd.html  lpd.py  main.py  model.html  model.py  plot.html  plot.py  plots.py  utils.html  utils.py
blpdm/: __init__.py  chem.py  lpd.py  main.py  plots.py  utils.py
doc/: module.html.jinja2
examples/: README.md  bees.ipynb  bees.py  chemical-conc-run.ipynb  chemical-conc-run.py  short-runs.ipynb  short-runs.py  updating-parameters.ipynb  updating-parameters.py
