[metadata]  # https://setuptools.readthedocs.io/en/latest/setuptools.html#metadata
name = blpdm
version = file: VERSION.txt
url = https://github.com/zmoon92/bee-lpdm
# download_url
# project_urls
author = Zachary Moon
author_email = zlm1@psu.edu
# maintainer = 
# maintainer_email = 
classifiers = 
  Programming Language :: Python :: 3
license = MIT
license_file = LICENSE.txt
description = Lagrangian (stochastic) particle dispersion model to model bees encountering floral scents
long_description = file: README.md #README.rst, CHANGELOG.rst, LICENSE.rst
keywords = Lagrangian particle dispersion, floral scents
platform = any
# provides = 
# requires = 
# obsoletes = 


[options]  # https://setuptools.readthedocs.io/en/latest/setuptools.html#options
zip_safe = False
setup_requires =
  # setuptools
  # setuptools >= 30.3.0     # minimal version for `setup.cfg`
  setuptools >= 38.3.0     # version with most `setup.cfg` bugfixes
install_requires =  # to run the model only
  numpy
  numba >= 0.44  # Dict type was introduced in 0.43, but 0.44 added type inference: https://numba.pydata.org/numba-doc/dev/release-notes.html#version-0-44-0
python_requires = >= 3.6, < 4
include_package_data = True  # include files specified in MANIFEST.in
# package_dir = 
#   = src
# packages = find:
packages = blpdm
# namespace_packages
# py_modules

# [options.packages.find]
# where = src
# exclude = 

[options.extras_require]  # https://setuptools.readthedocs.io/en/latest/setuptools.html#declaring-extras-optional-features-with-their-own-dependencies
plots = 
  matplotlib
  scipy
# dev = 
# test = 

[options.package_data]
* = *.txt *.md

# [options.exclude_package_data]

# [options.data_files]  # data files placed outside of the package


# [bdist_wheel]
# universal = 0  # = 1 => support Py 2 and 3
