[metadata]  # https://setuptools.readthedocs.io/en/latest/setuptools.html#metadata
name = blpd
version = file: VERSION.txt
url = https://github.com/zmoon/blpd
author = Zachary Moon
author_email = zlm1@psu.edu
classifiers =
  Programming Language :: Python :: 3
license = MIT
license_file = LICENSE.txt
description = Lagrangian (stochastic) particle dispersion model to model bees encountering floral scents
long_description = file: README.md
keywords = Lagrangian particle dispersion, floral scents
platform = any

[options]
zip_safe = False
install_requires =
  matplotlib
  numba >= 0.44  # Dict type was introduced in 0.43, but 0.44 added type inference: https://numba.pydata.org/numba-doc/dev/release-notes.html#version-0-44-0
  numpy
  scipy
  xarray
python_requires = >= 3.6, < 4
packages = find:
include_package_data = True

[options.extras_require]
docs =
  pdoc

[options.package_data]
* = *.txt *.md

[flake8]
max-line-length = 100
ignore =
  # whitespace before ':' - doesn't work well with black
  E203
  # module level import not at top of file
  E402
  # line too long - let black worry about that
  E501
  # line break before binary operator
  W503
  # missing whitespace around arithmetic operator - not always more readable imho
  E226
exclude =
  .eggs
  .ipynb_checkpoints
